iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2. OpenBSD 6.1 is not supported anymore.

    * Apache has been removed, Nginx is the only one web server available.

    * Improvements:
        - LDAP backend: Allow mail list account to use 2 attributes: member,
          uniqueMember.
        - Dovecot: Log subject, sender, size in mail deliver log.

    * Fixed issues:
        - installer: not correctly configure SOGo with IPv6 SQL server address.
          Thanks to Wraptor <nijs.thibaut _at_ gmail.com> for the report in
          forum.
        - Postfix: Improper SQL queries used to query per-user bcc address.
        - Nginx: Use single config file for default web hosts.
        - tools/backup_sogo.sh
            - not set correct owner and permission on backup files.
            - cannot remove old backup files.
        - Cannot log backup result to SQL db in tools/backup_openldap.sh.
          Note: backup is fine, just no log in SQL db.
          Thanks swejun <ingvar _at_ zebware.com> for the feedback and fix in
          forum.
        - SQL backends: User under disabled domain is able to send email with
          smtp protocol.
        - Cannot sync contacts on Android devices via EAS with SOGo.
        - tools/create_mail_user_* scripts doesn't use current date as
          password last change date for newly created user.
        - tools/migrate_sql_alias_table.py: doesn't support 'utf8' charset.
          Thanks Kacper Guzik <kacper.guzik _at_ zenbox _dot_ pl> for the
          report and code contribution.

    * Updated packages:
        + Roundcube -> 1.3.3

iRedMail-0.9.7:
    * Supports new distribution release:
        + OpenBSD 6.1. OpenBSD 6.0 is not supported anymore.
        + Ubuntu 17.04. Ubuntu 16.10 is not supported anymore.
        + Debian 9 (code name: stretch). Tested with Debian 9 RC3.

    * Improvements:
        - SQL structure change (for SQL backends): drop few columns in sql